Bug: Black hero img, z-index fix test

--- a/src/css/modules/_hero.scss
+++ b/src/css/modules/_hero.scss
@@ -3,6 +3,7 @@
   display: block;
   position: relative;
   background: $black;
+  z-index: 1;
   img{
     margin: 0;
   }
